--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <img src="/logos/bsaneazul.png" alt="BsaneLogo" height="150px">
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#guias">Guías</a></li>
                 <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#guias">Guías</a></li>
                 <li><a href="https://wa.me/message/SP2Q2T5SWUDAA1">Agenda tu cita</a></li>
             </ul>
         </div>
@@ -48,11 +48,16 @@
                     Juntos, lograremos que encuentres tu mejor versión. </p>
             </div>
         </section>
-        <section id="servicios" class="servicios">
-            <h1>SERVICIOS</h1>
-            <h2>Consulta Virtual</h2>
-            <p>El proceso terapéutico de modalidad virtual incluye la evaluación, diagnóstico, acompañamiento y
-                tratamiento a problemáticas de la salud mental.</p>
+        <section id="servicios">
+            <h1 class="serviciosTitle">SERVICIOS</h1>
+            <div class="servicios">
+                <h2>Consulta Virtual</h2>
+                <p>Inicia tu camino hacia el bienestar emocional. El proceso terapéutico de modalidad virtual incluye la
+                    evaluación, diagnóstico, acompañamiento y
+                    tratamiento a problemáticas de la salud mental. La primera sesión es para conocerte, evaluar tu caso
+                    y comenzar progresivamente el trabajo
+                    terapéutico. Atención a mayores de 18 años. </p>
+            </div>
         </section>
         <section id="guias">
             <h1 class="guidesTitle">GUÍAS</h1>
@@ -105,6 +110,56 @@
                         resultado de un esfuerzo continuo, comprensión mutua y respeto genuino. Para que toda relación
                         funcione, necesitamos establecer límites firmes y a resolver conflictos de manera constructiva,
                         fortaleciendo así los cimientos de nuestras conexiones humanas. 💖💬
+                    </p>
+                </div>
+            </div>
+            <div class="guides">
+                <div class="caja" placeholder="caja4">
+                    <a
+                        href="https://www.instagram.com/p/C9V5H1GvHzi/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="><img
+                            src="/logos/cosasbuenas.jpeg" alt="CosasBuenasPhoto" height="350px"></a>
+                    <h2>Van a pasar cosas buenas</h2>
+                    <p>En la vida, nuestra actitud y perspectiva juegan un papel fundamental en cómo experimentamos el
+                        mundo. Adoptar una mentalidad positiva no solo mejora nuestro bienestar emocional, sino que
+                        también nos prepara para enfrentar desafíos con una mayor resiliencia.
+
+                        - Practica la gratitud: Dedica unos minutos al día para reconocer y agradecer las cosas buenas
+                        en tu vida.
+                        - Rodearte de positividad: Busca la compañía de personas que te inspiren y te apoyen.
+                        - Encuentra lo bueno en cada situación: Incluso en los momentos difíciles, trata de identificar
+                        algún aspecto positivo o una lección que puedas aprender.
+                    </p>
+                </div>
+                <div class="caja" placeholder="caja5">
+                    <a
+                        href="https://www.instagram.com/p/C8Vg7FpP8_r/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="><img
+                            src="/logos/pazMental.jpeg" alt="PazPhoto" height="350px"></a>
+                    <h2>Tu paz mental importa</h2>
+                    <p>Es fácil caer en la trampa de intentar complacer a todos a nuestro alrededor, pero hacerlo puede
+                        tener un alto costo para nuestra salud mental.
+
+                        Acepta que no puedes agradar a todos y está bien. Enfócate en las personas que realmente te
+                        valoran por quien eres.</p>
+                </div>
+                <div class="caja" placeholder="caja3">
+                    <a
+                        href="https://www.instagram.com/p/C7NbKZ5PLJL/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="><img
+                            src="/logos/limites.jpeg" alt="LimitesPhoto" height="350px"></a>
+                    <h2>Pon límites</h2>
+                    <p>Hoy quiero recordarte que poner límites no es ser egoísta, es ser valiente. Tener el valor de
+                        establecer límites es esencial para proteger tu bienestar emocional, físico y mental. Recuerda:
+
+                        1️⃣ Escucha a tu cuerpo y mente.
+                        2️⃣ Observa tus emociones.
+                        3️⃣ Reflexiona sobre tus experiencias.
+                        4️⃣ Aprende a decir “no”.
+                        5️⃣ Conoce tus necesidades y valores.
+
+                        Ser valiente significa respetar tus propios límites y priorizar tu bienestar. 🌸💪
+
+                        Si necesitas apoyo para trabajar en tus límites y mejorar tu bienestar emocional, estoy aquí
+                        para ayudarte. ¡Agenda una sesión conmigo y empecemos juntos este camino hacia una vida más
+                        equilibrada y saludable!
                     </p>
                 </div>
             </div>
