--- a/index.html
+++ b/index.html
@@ -52,11 +52,21 @@
             <h1 class="serviciosTitle">SERVICIOS</h1>
             <div class="servicios">
                 <h2>Consulta Virtual</h2>
-                <p>Inicia tu camino hacia el bienestar emocional. El proceso terapéutico de modalidad virtual incluye la
-                    evaluación, diagnóstico, acompañamiento y
-                    tratamiento a problemáticas de la salud mental. La primera sesión es para conocerte, evaluar tu caso
-                    y comenzar progresivamente el trabajo
-                    terapéutico. Atención a mayores de 18 años. </p>
+                <p>Inicia tu camino hacia el bienestar emocional y descubre cómo la terapia puede transformarte. Nuestro
+                    proceso terapéutico de modalidad virtual está diseñado para ofrecerte un enfoque integral que
+                    incluye evaluación, diagnóstico, acompañamiento y tratamiento de diversas problemáticas relacionadas
+                    con la salud mental.
+                </p>
+                <p> En la primera sesión, nos tomaremos el tiempo necesario para conocerte mejor. Esta sesión inicial es
+                    fundamental, ya que nos permite evaluar tu situación de manera personalizada y entender tus
+                    necesidades específicas. A partir de ahí, comenzaremos un trabajo terapéutico progresivo, adaptado a
+                    tu ritmo y circunstancias.
+                </p>
+                <p>Es importante destacar que brindamos atención a personas mayores de 18 años, creando un espacio
+                    seguro y confidencial donde puedas explorar tus pensamientos y emociones. Te invitamos a dar este
+                    paso hacia una vida más plena y equilibrada.
+
+                </p>
             </div>
         </section>
         <section id="guias">
