--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </section>
         <section id="servicios">
             <h1 class="serviciosTitle">SERVICIOS</h1>
+            <h2 class="serviciosTitleSub">Consulta Virtual</h2>
             <div class="servicios">
-                <h2>Consulta Virtual</h2>
                 <p>Inicia tu camino hacia el bienestar emocional y descubre cómo la terapia puede transformarte. Nuestro
                     proceso terapéutico de modalidad virtual está diseñado para ofrecerte un enfoque integral que
                     incluye evaluación, diagnóstico, acompañamiento y tratamiento de diversas problemáticas relacionadas
